<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Forest Firefighters</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="boton_tiempo">boton tiempo</string>
    <string name="boton_mapa">boton mapa</string>
    <string name="boton_redes">boton redes</string>
    <string name="boton_historial">boton historial</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiempo_ahora">Tiempo Ahora</string>
    <string name="viento">Viento</string>
    <string name="_00_00">00:00</string>
    <string name="_14">14º</string>
    <string name="_01_00">01:00</string>
    <string name="_02_00">02:00</string>
    <string name="_04_00">04:00</string>
    <string name="_05_00">05:00</string>
    <string name="_06_00">06:00</string>
    <string name="_07_00">07:00</string>
    <string name="_08_00">08:00</string>
    <string name="_09_00">09:00</string>
    <string name="_10_00">10:00</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="_22_00">22:00</string>
    <string name="_23_00">23:00</string>
    <string name="km_h">Km/h</string>
    <string name="historial_de_incendios">Historial de incendios</string>
    <string name="imagen_de_fondo">imagen de fondo</string>
    <string name="logo_aplicacion">logo aplicacion</string>
    <string name="imagen_fondo_registro">Imagen fondo registro</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="inicio_sesion_titulo">INICIO SESIÓN</string>
    <string name="recordar">Recordar</string>
    <string name="has_olvidado_la_contrasena">¿Has olvidado la contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena">Contraseña</string>
    <string name="search_hint">Buscar poblacion</string>
    <string name="registrar_incendio">Registrar incendio</string>
    <string name="nombre_del_incendio">Nombre del Incendio</string>
    <string name="provincia">Provincia</string>
    <string name="registrar">Registrar</string>
    <string name="comentarios">Comentarios</string>
    <string name="boton_helicoptero">boton helicoptero</string>
    <string name="boton_avion">boton avion</string>
    <string name="boton_ctierra">boton cTierra</string>
    <string name="boton_carroceta">boton carroceta</string>
    <string name="boton_bulldozer">boton bulldozer</string>
    <string name="boton_helitransportada">boton helitransportada</string>
    <string name="aniadir">Añadir</string>
    <string name="helicopteros">Helicopteros</string>
    <string name="helicoptero">Helicoptero</string>
    <string name="cancelar">Cancelar</string>
    <string name="aniadir_medios">Añadir Medios</string>

    <string name="TextSelectProv">Selecciona una provincia</string>
    <string name="TextSelectMun">Selecciona un municipio</string>
    <string name="TextErrorCodProv">Error al obtener código de provincia</string>
    <string name="clima">CLIMA</string>
    <string name="introduce_una_localidad">Introduce una localidad</string>
    <string name="comprobar_clima">Comprobar clima</string>
</resources>