<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_aplicacion" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="414dp"
        android:layout_height="894dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <ImageButton
                android:id="@+id/mapaButtom"
                android:layout_width="84dp"
                android:layout_height="350dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/boton_mapa"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/mapa_cyl"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/tiempoButtom"
                android:layout_width="161dp"
                android:layout_height="350dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/boton_tiempo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/el_tiempo2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/historialButton"
                android:layout_width="179dp"
                android:layout_height="350dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/boton_historial"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/historial" />

            <ImageButton
                android:id="@+id/redesButton"
                android:layout_width="180dp"
                android:layout_height="350dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/boton_redes"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logos2" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>