<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_clima"
    tools:context=".LocalityWeatherActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="114dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClima"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/sol2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewClima"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="27dp"
        android:text="@string/clima"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/textViewLocalizacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/introduce_una_localidad"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClima"
        app:layout_constraintVertical_bias="0.251" />

    <Spinner
        android:id="@+id/spinnerProvincia"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocalizacion"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinnerLocalidad"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProvincia"
        app:layout_constraintVertical_bias="0.204"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonClima"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/purple_500"
        android:text="@string/comprobar_clima"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:layout_marginEnd="12dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textViewClima"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/nube"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="97dp"
        android:layout_height="86dp"
        android:layout_marginEnd="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textViewClima"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/lluvia"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="109dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="618dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textViewClima"
        app:srcCompat="@drawable/chopito" />

</androidx.constraintlayout.widget.ConstraintLayout>